--- a/index.html
+++ b/index.html
@@ -50,13 +50,12 @@
     <div class="container text-center">
       <div class="row">
         <div class="col">
-          Witaj
+          <h5>Buty na obcasie <span class="badge text-bg-secondary">New</span></h5>        </div>
+        <div class="col">
+          <h5>Obcasy na butach <span class="badge text-bg-secondary">Old</span></h5>
         </div>
         <div class="col">
-          Świecie
-        </div>
-        <div class="col">
-          !
+          <h5>tak <span class="badge text-bg-secondary">nie</span></h5>
         </div>
       </div>
     </div>
