--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     
     <br>
     <br>
-    
+    <button onclick="WylistowanieOsob()">Pa tera</button>
     <div>
       <p>Tekst ma zmienić kolor</p>
       <section>
